--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 <html lang="{{ site.language }}" class="no-js">
     {% include head.html %}
     <body class="has-push-menu">
-        {% include minutes-to-read.html %}
+     <!--Thoi gian doc   {% include minutes-to-read.html %} -->
         {% include svg-icons.html %}
         {% include header.html %}
 
