--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,7 @@ layout: main
                     {% endif %}
                 </time>
                 <h1 class="title">{{ featured.title }}</h1>
-  <!-- Mô tả              <p class="description">{{ featured.subtitle }}</p> -->
+                  <p class="description">{{ featured.subtitle }}</p>
                 <div class="buttons">
                     <a href="{{ featured.url | prepend: site.baseurl }}" role="button" class="button">
                         <svg><use xlink:href="#icon-read"></use></svg>
@@ -81,7 +81,7 @@ layout: main
                             </h2>
                         </a>
                         <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
-                            <p class="description">{{ post.description }}</p>
+                          <!-- Mô tả                  <p class="description">{{ post.description }}</p> -->
                         </a>
                         <div class="tags">
                             {% for tag in post.tags %}
