--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,13 +83,13 @@ layout: main
                         <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">
                           <!-- Mô tả                  <p class="description">{{ post.description }}</p> -->
                         </a>
-                        <div class="tags">
+                      <!--Tags  <div class="tags">
                             {% for tag in post.tags %}
                                 {% if tag != "" %}
                                     <a href="{{ site.baseurl}}/tags/#{{tag | slugify }}">#{{ tag }}</a>
                                 {% endif %}
                             {% endfor %}
-                        </div>
+                        </div>  -->
                     </div>
                 </div>
             </article>
