--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,13 +18,13 @@
                     <svg id="clock" class="icon-clock"><use xlink:href="#icon-clock"></use></svg>
                     <span>{{ minutesText }}</span>
 
-
+                    <div class="tags">
                           {% for tag in post.tags %}
                               {% if tag != "" %}
                                   <a href="{{ site.baseurl}}/tags/#{{tag | slugify }}">#{{ tag }}</a>
                               {% endif %}
                           {% endfor %}
-        
+                      </div>
                 </p>
                 <h1 class="post-title">{{ page.title }}</h1>
                 <p class="post-subtitle">{{ page.subtitle }}</p>
