--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,12 +23,12 @@
                 <h1 class="post-title">{{ page.title }}</h1>
                 <p class="post-subtitle">{{ page.subtitle }}</p>
 
-                      {% for tag in post.tags %}
-                          {% if tag != "" %}
-                              <a href="{{ site.baseurl}}/tags/#{{tag | slugify }}">#{{ tag }}</a>
-                          {% endif %}
-                      {% endfor %}
-            
+                <div class="post_tag">
+              <span>Tags:</span>
+              {% for tag in page.tags %}
+              <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">{{ tag }}</a>
+              {% endfor %}
+            </div>
                 {% if page.image and paginator.activated == nil %}
                     <img src="{{ page.image }}" alt="Featured image" class="post-cover">
                 {% endif %}
