--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,10 +23,11 @@
                 <h1 class="post-title">{{ page.title }}</h1>
                 <p class="post-subtitle">{{ page.subtitle }}</p>
                 <div class="tags">
-                  <span>Tags:</span>
-        {% for tag in post.tags %}
-        <a href="{{site.baseurl}}/tags#{{tag}}" class="tag">{{ tag }}</a>
-        {% endfor %}
+                      {% for tag in page.tags %}
+                          {% if tag != "" %}
+                              <a href="{{ site.baseurl}}/tags/#{{tag | slugify }}">#{{ tag }}</a>
+                          {% endif %}
+                      {% endfor %}
                   </div>
                 {% if page.image and paginator.activated == nil %}
                     <img src="{{ page.image }}" alt="Featured image" class="post-cover">
