--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,8 +15,8 @@
         <svg class="icon-search"><use xlink:href="#icon-search"></use></svg>
     </a>
     {% if site.show_get_theme_btn %}
-        <a href="https://github.com/thiagorossener/jekflix-template" class="get-theme" role="button">
-            Get this theme!
+        <a href="https://www.youtube.com/channel/UCi5AHTHsyY2vcPAb-PcxkGw" class="get-theme" role="button">
+            Youtube
         </a>
     {% endif %}
 </header>
