--- a/_sass/_modal.scss
+++ b/_sass/_modal.scss
@@ -79,7 +79,7 @@
             margin: 0;
 
             &:after {
-              content: ""Watch Now";
+              content: "Watch Now";
               text-transform: uppercase;
               display: inline-block;
               background: $themeColor;
