--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -719,7 +719,7 @@
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
-    <!-- overflow: hidden; -->
+    /* overflow: hidden; */
 }
 
 .video-wrapper iframe {
