--- a/assets/css/player.css
+++ b/assets/css/player.css
@@ -1,4 +1,8 @@
 /* Trinh phat player */
+.title-movie {
+    text-align: center;
+    font-weight: bold;
+}
 .video-wrapper {
     position: relative;
     padding-bottom: 56.25%;
