--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -37,6 +37,11 @@
     padding: rem(60px) rem(10px) 0;
   }
 
+  #title-movie {
+    text-align: center;
+    font-weight: bold;
+}
+
   img {
     max-width: 100%;
     margin: rem(0px) auto;
